test/force-app/main/default/objects/Simap_Code_CPV__c/Simap_Code_CPV__c.object-meta.xml
<CustomObject>
    <label>Simap Code CPV</label>
    <nameField>
        <label>Simap Code CPV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Simap Codes CPV</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>