test/force-app/main/default/objects/Simap_Code_CPV__c/fields/appliquer_a_recherche_FEDERALE__c.field-meta.xml
<CustomField>
    <fullName>appliquer_a_recherche_FEDERALE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>appliquer à recherche FEDERALE</label>
    <type>Checkbox</type>
</CustomField>