test/force-app/main/default/objects/Simap_Code_CPV__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code_CPV__c</columns>
    <columns>inclus_dans_API_SIMAP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>